; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_kmemleak.c_kmemleak_disable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_kmemleak.c_kmemleak_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kmemleak_error = common dso_local global i32 0, align 4
@kmemleak_early_log = common dso_local global i32 0, align 4
@kmemleak_enabled = common dso_local global i32 0, align 4
@kmemleak_initialized = common dso_local global i32 0, align 4
@cleanup_work = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Kernel memory leak detector disabled\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @kmemleak_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kmemleak_disable() #0 {
  %1 = call i64 @atomic_cmpxchg(i32* @kmemleak_error, i32 0, i32 1)
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %13

4:                                                ; preds = %0
  %5 = call i32 @atomic_set(i32* @kmemleak_early_log, i32 0)
  %6 = call i32 @atomic_set(i32* @kmemleak_enabled, i32 0)
  %7 = call i64 @atomic_read(i32* @kmemleak_initialized)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %4
  %10 = call i32 @schedule_work(i32* @cleanup_work)
  br label %11

11:                                               ; preds = %9, %4
  %12 = call i32 @pr_info(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %3
  ret void
}

declare dso_local i64 @atomic_cmpxchg(i32*, i32, i32) #1

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @schedule_work(i32*) #1

declare dso_local i32 @pr_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
